--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             </div>
         </div>
         <div class="history-container">
-            <h1>History</h1>
+            <h2>History</h2>
+            <h1><span >W</span>:0 - <span>L</span>:0</h1>
         </div>
     </div>
     <script src="script.js"></script>
