--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="history-container">
             <h2>History</h2>
-            <h1><span >W</span>:0 - <span>L</span>:0</h1>
+            <h1 id="record"><span class="win">W</span>:<span id="winCounter">0</span> - <span class="lost">L</span>:<span id="loseCounter">0</span></h1>
         </div>
     </div>
     <script src="script.js"></script>
